--- a/Ecom-Frontend/vite-project/src/component/Navbar.css
+++ b/Ecom-Frontend/vite-project/src/component/Navbar.css
@@ -4,7 +4,7 @@
   top: 0;
   z-index: 100;
   /* overflow-x: hidden; */
-   width: 100%;
-   max-width: 1600px;
+   /* width: 100%;
+   max-width: 1600px; */
    padding: 2%;
 }
