--- a/Ecom-Frontend/vite-project/src/Product/ProductShow.css
+++ b/Ecom-Frontend/vite-project/src/Product/ProductShow.css
@@ -3,20 +3,25 @@
 /* 🌟 General Styles */
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
   background-color: #f4f4f4;
+  /* margin-top: 3%; */
 }
 
 .container {
   width: 90%;
-  margin: auto;
+  /* margin: auto; */
   padding: 20px;
   background: white;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+  /* margin-top: 20%; */
 
+}
+.mt-4{
+  margin-top: 9%;
+}
 .pro {
   text-align: center;
   color: #333;
