--- a/Ecom-Frontend/vite-project/src/component/Cart/ProductCart.css
+++ b/Ecom-Frontend/vite-project/src/component/Cart/ProductCart.css
@@ -4,7 +4,9 @@
   margin: 0 auto;
   padding: 20px;
 }
-
+.ttt{
+  margin-top: 3%;
+}
 .sho {
   font-size: 2rem;
   color: #343a40;
@@ -65,6 +67,8 @@
   border: 1px solid #dee2e6;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 19%;
+  margin-left: 2%;
 }
 
 /* Media Queries */
