--- a/Ecom-Frontend/vite-project/src/component/Home1.css
+++ b/Ecom-Frontend/vite-project/src/component/Home1.css
@@ -1,4 +1,21 @@
 /* Main container */
+/* Carousel Styling */
+.carousel {
+  margin-top: 5%;
+  border-radius: 9%;
+  width: 98%;
+  margin-left: 1%;
+}
+
+.carousel-img {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+  border-radius: 20px;
+  box-shadow: 7px 7px 10px rgba(0, 0, 5, 0.1);
+}
+
+
 .category-container {
   display: flex;
   flex-direction: column;
@@ -60,11 +77,67 @@
   font-size: 16px;
   font-weight: bold;
 }
+@media (min-width: 1440px) {
+  .carousel-img {
+    max-height: 500px;
+  }
+}
 
+@media (min-width: 1200px) { 
+   .carousel-img {
+         max-height: 450px;
+}
+}
+@media (max-width: 992px) {
+  .carousel-img {
+    max-height: 300px;
+  }
+}
 /* Responsive Layout */
 @media (max-width: 768px) {
   .category-grid {
     flex-direction: column;
     align-items: center;
   }
+  .carousel {
+    width: 100%;
+    border-radius: 5%;
+  }
+
+  .carousel-img {
+    max-height: 250px;
+  }
+}
+@media (max-width:480px){
+  .carousel {
+    border-radius: 0;
+    margin-top: 1%;
+  }
+
+  .carousel-img {
+    max-height: 200px;
+  }
+} 
+
+
+@media (max-width: 360px) {
+  .carousel {
+    width: 97%;
+    border-radius: 0;
+    margin-top: 6%;
+  }
+
+  .carousel-img {
+    max-height: 170px;
+  }
+}
+@media(max-width:280px){
+  .carousel {
+    margin-top: 1%;
+  }
+
+  .carousel-img {
+    max-height: 150px;
+  }
+
 }
