--- a/Ecom-Frontend/vite-project/src/index.css
+++ b/Ecom-Frontend/vite-project/src/index.css
@@ -1,28 +1,9 @@
-/* *{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-} */
-/* body{
+}
+body{
   margin: 0;
   padding: 10PX;
-} */
-/* .pro-img  {
-  height: 80px;
-  width: 80px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin: auto;
-  display: block;
-  border: 1px solid black;
 }
- .pro-img img {
-  height: 80px;
-  top: 0;
-  width: 80px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin: auto;
-  display: block;
-  border: 1px solid black;
-} */
